<resources>
    <string name="app_name">ALPHA FITNESS</string>
    <string name="action_settings">Settings</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record_workout">Record Workout</string>
    <string name="workout_details">Workout Details</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="average_weekly">Average/Weekly</string>
    <string name="time">Time</string>
    <string name="workouts">Workouts</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="all_time">All Time</string>
    <string name="start_workout">Start Workout</string>
    <string name="stop_workout">Stop Workout</string>
    <string name="google_map_key">AIzaSyDqD7uKnXjcRqumZe1veVeloyji6j5MSpI</string>
    <string name="average">AVG</string>
    <string name="max">MAX</string>
    <string name="min">MIN</string>

</resources>
