<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.alphafitness.thealphafitnessapp.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            style="@style/Title"
            android:textColor="@android:color/primary_text_dark"
            android:text="@string/app_name" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                style="@style/button_default"
                android:background="@drawable/button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/sym_def_app_icon"
                android:id="@+id/imageButton"
                android:layout_weight="1" />
            <TextView
                style="@style/heading2"
                android:text="Peter Dole"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:id="@+id/username"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/heading4"
                android:text="@string/gender"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                style="@style/heading4"
                android:textAlignment="center"
                android:background="@android:color/darker_gray"
                android:text="Male"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/user_gender"/>
            <TextView
                style="@style/heading4"
                android:text="@string/weight"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                style="@style/heading4"
                android:textAlignment="center"
                android:background="@android:color/darker_gray"
                android:text="180 lbs"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/user_weight"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:background="@android:color/darker_gray"
                android:text="@string/average_weekly" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="@string/distance"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="2.4 mi"
                android:textAlignment="textEnd"
                android:id="@+id/distance_walked"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="@string/time"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="1 hr 34 min 05 sec"
                android:textAlignment="textEnd"
                android:id="@+id/time_walked"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="@string/workouts"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="2 times"
                android:textAlignment="textEnd"
                android:id="@+id/workout_count"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="@string/calories_burned"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="1,000 Cal"
                android:textAlignment="textEnd"
                android:id="@+id/calories"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:background="@android:color/darker_gray"
                android:text="@string/all_time" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="@string/distance"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="2.4 mi"
                android:textAlignment="textEnd"
                android:id="@+id/all_distance_walked"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="@string/time"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="1 hr 34 min 05 sec"
                android:textAlignment="textEnd"
                android:id="@+id/all_time_walked"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="@string/workouts"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="2 times"
                android:textAlignment="textEnd"
                android:id="@+id/all_workout"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="@string/calories_burned"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/heading3"
                android:text="1,000 Cal"
                android:textAlignment="textEnd"
                android:id="@+id/all_calories"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
